Fix overflow-x

--- a/src/resources/styles.css
+++ b/src/resources/styles.css
@@ -21,10 +21,6 @@ body,
   overflow: hidden;
 }
 
-#root {
-  overflow: auto;
-}
-
 body {
   position: fixed;
   overflow: hidden;
